--- a/telepathy-ipc/build.gradle
+++ b/telepathy-ipc/build.gradle
@@ -28,7 +28,7 @@ def artifactory_password = properties.getProperty('artifactory_password')
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    buildToolsVersion '30.0.0'
 
     defaultConfig {
         minSdkVersion 21
@@ -46,6 +46,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
 }
 
@@ -53,7 +57,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.remotecallback:remotecallback:1.0.0-alpha02'
 
     testImplementation 'junit:junit:4.13'
