--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.room_version = "2.2.5"
     ext.lifecycle_version = "2.2.0"
     ext.arch_version = "2.1.0"
+    ext.dcendents_version = "2.1"
 
     repositories {
         google()
@@ -16,6 +17,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:$jfrog_version"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:$dcendents_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
