--- a/telepathy-ipc/build.gradle
+++ b/telepathy-ipc/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='th.co.digio.poolshark'
 
 ext.versionMajor = 1
 ext.versionMinor = 0
