--- a/telepathy-ipc/build.gradle
+++ b/telepathy-ipc/build.gradle
@@ -9,7 +9,7 @@ group='th.co.digio.poolshark'
 
 ext.versionMajor = 1
 ext.versionMinor = 0
-ext.versionPatch = 0
+ext.versionPatch = 1
 
 def static releaseTime() {
     return new Date().format("yyyyMMdd", TimeZone.getTimeZone("Asia/Bangkok")).toInteger()
@@ -24,13 +24,23 @@ def libraryGroupId = 'th.co.digio.poolshark'
 def libraryArtifactId = 'telepathy-ipc'
 def libraryVersion = generateVersionName(versionMajor, versionMinor, versionPatch)
 
+ext {
+    mGroupId = "th.co.digio.poolshark"
+    mArtifactId = "telepathy-ipc"
+    mVersionCode = releaseTime()
+    mVersionName = generateVersionName(versionMajor, versionMinor, versionPatch)
+
+    mLibraryName = "Telepathy-IPC"
+    mLibraryDescription = "Simple IPC Library"
+}
+
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.1'
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode releaseTime()
         versionName generateVersionName(versionMajor, versionMinor, versionPatch)
 
@@ -55,9 +65,49 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+task androidSourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+    from android.sourceSets.main.java.srcDirs
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId mGroupId
+                artifactId mArtifactId
+                version mVersionName
+
+                from components.release
+
+                artifact androidSourcesJar
+
+                pom {
+                    name = mLibraryName
+                    description = mLibraryDescription
+                }
+            }
+        }
+
+        // 5. Update repository details and credentials.
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/prathanbomb/telepathy-ipc")
+                credentials {
+                    username = System.getenv("GPR_USER")
+                    password = System.getenv("GPR_KEY")
+                }
+            }
+        }
+    }
+}
+
+publish.dependsOn assemble
