--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,10 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build AAR ⚙️🛠
-        run: bash ./gradlew :Telepathy IPC:assemble
+        run: bash ./gradlew :telepathy-ipc:assemble
 
       - name: Publish to GitHub Package Registry 🚀
-        run: bash ./gradlew :Telepathy IPC:publish
+        run: bash ./gradlew :telepathy-ipc:publish
         env:
           GPR_USER: ${{ github.actor }}
           GPR_KEY: ${{ secrets.GITHUB_TOKEN }}
