--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.room_version = "2.2.5"
     ext.lifecycle_version = "2.2.0"
     ext.arch_version = "2.1.0"
+    ext.bintray_version = "1.8.4"
     ext.dcendents_version = "2.1"
 
     repositories {
@@ -17,6 +18,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:$jfrog_version"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$dcendents_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -33,4 +35,8 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
 }
